--- a/WCTTestbed2/WCTTestbed2.UWP/WCTTestbed2.UWP.csproj
+++ b/WCTTestbed2/WCTTestbed2.UWP/WCTTestbed2.UWP.csproj
@@ -12,6 +12,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp">
+      <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Uno.Core" Version="1.29.0" />
   </ItemGroup>
   <PropertyGroup>
