--- a/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
+++ b/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
@@ -38,10 +38,11 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="2.0.532" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="2.0.532" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.10" />
-    <DotNetCliToolReference Include="Uno.Wasm.Bootstrap.Cli" Version="1.0.10" />
+    <PackageReference Include="Uno.UI" Version="2.2.0" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="2.2.0" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.16" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.2.0-dev.1" PrivateAssets="all" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="6.0.0-ge975abb046" />
   </ItemGroup>
   <Import Project="..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems" Label="Shared" Condition="Exists('..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems')" />
 </Project>
